test/invalidComponentReplacement2.slq

def main(){
    a:=vector(n,(0,0)); /// error
    for i in 0..n{ /// error
        a[k]:=a[k]; /// error
    }
}
